# Infakewe_yarn_sim

./: .gitignore  README.md  install_conda.sh  pyproject.toml
.github/workflows/: ci.yml
env/: README.md  environment.base.yml  environment.linux-64.lock.yml  environment.linux-64.yml  environment.win-64.lock.yml  environment.win-64.yml  environment.yml  explicit-linux-64.txt  explicit-win-64.txt
scripts/: .hello_world.py.un~  .verify_install.py.un~  README.md  hello_world.py  verify_install.py  verify_install.py~
scripts/common/: compat.py
scripts/examples/chrono_yarn/: chain_of_tubes.py
scripts/examples/fea_chrono_yarn/: hanging_cable_yarn.py
scripts/tools/: .freeze_env.ps1.un~  .setup_env.ps1.un~  .smoke_test.py.un~  README.md  freeze_env.ps1  freeze_env.sh  run_local_tests.ps1  run_local_tests.sh  setup_env.ps1  setup_env.sh  smoke_test.py
scripts/tutorials/: 2_1_constraints.py  2_2_motors.py  4_2_motor_pulled_rope.py  README.md
scripts/tutorials/1_1_foundations/: quaternions.py  vectors.py
scripts/tutorials/1_2_bodies_and_contact_systems/: add_bodies.py
scripts/tutorials/1_3_visualization_basics/: visualization_basics.py
scripts/tutorials/2_bodies_connections/: 2_1_joints.py
scripts/tutorials/3_system_responses/: 3_1_system_stepping.py
scripts/tutorials/4_chains_of_bodies/: 4_1_chain_of_bodies.py
src/chrono_yarn/: README.md  __init__.py  compat.py  config.py  geometry.py  materials.py  results.py  sim_runner.py  yarn_chain.py
tests/: test_falling_yarn.py  test_install.py  test_sim_basic.py
tests/common/: __init__.py  compat.py
(+23 files in other folders)
