[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-yarn"
version = "0.0.0"
description = "Yarn–guide simulation prototype using PyChrono"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy",
  "matplotlib",
]
# PyChrono is installed via conda; see README packaging note.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
